--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ h1, h2, h3, h4, h5, h6 {
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">About TODO!</h1><br>
-      <h5 class="w3-center">As simple as a ___</h5>
-      <p class="w3-large">We requests you to commit to donating a dollar a month towards a charitable cause which is chosen by the group's consent!</p>
+      <h1 class="w3-center">About the Org</h1><br>
+      <h5 class="w3-center">Set up once help every month</h5>
+      <p class="w3-large">We plan to donate you one dollar every month to NGOs in need. Every month we will donate money to the cause that you suggest.</p>
       </div>
   </div>
   
@@ -57,10 +57,10 @@ h1, h2, h3, h4, h5, h6 {
     <div class="w3-col l6 w3-padding-large">
       <h1 class="w3-center">Why?</h1><br>
       <h4>One Dollar is Easy</h4>
-      <p class="w3-text-grey">For most of our patrons, this is an insignificant amount!</p><br>
+      <p class="w3-text-grey">We ask for just a dollar from your thousand dollar paycheck every month</p><br>
     
-      <h4>Shows Commitment</h4>
-      <p class="w3-text-grey">Probably better than your new year resolution</p><br>
+      <h4>This serves as a platform to give </h4>
+      <p class="w3-text-grey">We </p><br>
     
       <h4>Click and Forget!</h4>
       <p class="w3-text-grey">Setup your payment once, and keep making new people smile every month!</p><br>
