--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">About the Org</h1><br>
       <h5 class="w3-center">Set up once help every month</h5>
-      <p class="w3-large">We plan to donate you one dollar every month to NGOs in need. Every month we will donate money to the cause that you suggest.</p>
+      <p class="w3-large">We plan to donate one dollar every month to NGOs in need. Every month we will donate money to the cause that you suggest.</p>
       </div>
   </div>
   
