--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ h1, h2, h3, h4, h5, h6 {
     <a href="#home" class="w3-bar-item w3-button"><b>The One Dollar Org</b></a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#why" class="w3-bar-item w3-button">Why?</a>
+      <a href="#about" class="w3-bar-item w3-button">Home</a>
+      <a href="#why" class="w3-bar-item w3-button">About</a>
+      <a href="#contact" class="w3-bar-item w3-button">Causes</a>
+      <a href="#contact" class="w3-bar-item w3-button">Impact</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
