--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ h1, h2, h3, h4, h5, h6 {
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">About the Org</h1><br>
+      <h1 class="w3-center">Give a helping hand to those who need it</h1><br>
       <h5 class="w3-center">Set up once help every month</h5>
-      <p class="w3-large">Many of us care about the environment but drive a car and maybe feel guilty about it. Many of us care about hungry kids around the world but land up wasting our meals sometimes. The list is unending! The One Dollar Org plans to donate the money we gather every month to NGOs in need. We will donate money </p>
+      <p class="w3-large">With just one dollar a month </p>
       </div>
   </div>
   
