--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button"><b>The One Dollar Org<img src="./oned.png" width="50"></img></b></a>
+    <a href="#home" class="w3-bar-item w3-button"><b><h3>The One Dollar Org</h3></The><img src="./oned.png" width="50"></img></b></a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="#home" class="w3-bar-item w3-button">Home</a>
@@ -89,12 +89,14 @@ h1, h2, h3, h4, h5, h6 {
   <!-- Impact Section -->
   <div class="w3-row w3-padding-64" id="impact">
       <div class="l6 w3-padding-large">
-        <h1 class="w3-center">Charities we support</h1><br>
+        <h1 class="w3-center">Charities</h1><br>
         <a href="https://support.savethechildren.in/make-a-donation/donate-page.php"><h4>Save the Child</h4></a>
         <p class="w3-text-grey">Provides health, nutrition, education, emergency services to deprived children</p><br>
       
         <a href="https://www.smilefoundationindia.org/"><h4>Smile Foundation</h4></a>
         <p class="w3-text-grey">Providing Education to children in rural, slum and unreached areas.</p><br> 
+      
+        <p class="w3-text-grey"><h5>tell us your charity, and we'll champion your cause!</h5></p>
       </div>
     </div>
   
