Added Give Image and formatted tag line

--- a/index.html
+++ b/index.html
@@ -17,22 +17,25 @@ h1, h2, h3, h4, h5, h6 {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button"><b>The One Dollar Org<img src="./oned.png" width="50"></img></b></a>
+    <a href="#home" class="w3-bar-item w3-button w3-xlarge">The One Dollar Org</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#home" class="w3-bar-item w3-button">Home</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#impact" class="w3-bar-item w3-button">Impact</a>
-      <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      <a href="#home" class="w3-bar-item w3-button w3-large">Home</a>
+      <a href="#about" class="w3-bar-item w3-button w3-large">About</a>
+      <a href="#impact" class="w3-bar-item w3-button w3-large">Impact</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-large">Contact</a>
     </div>
   </div>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <img class="w3-image" src="/w3images/hamburger.jpg" alt="Hamburger Catering" width="1600" height="800">
+ <img class="w3-image" src="give_wide.jpg" alt="Hamburger Catering" width="1600" height="800">
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-    <h1 class="w3-xxlarge">The One Dollar Org</h1>
+    <div class="w3-white">
+      <div class="w3-text-black">
+    <h3 class="w3-center">&nbsp;&nbsp;Give a helping hand to those who need it&nbsp;&nbsp</h3>
+  </div></div>
   </div>
 </header>
 
@@ -42,16 +45,7 @@ h1, h2, h3, h4, h5, h6 {
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="home">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="./oned.png" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="1000" height="800">
     </div>
-
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">Give a helping hand to those who need it</h1><br>
-      <h5 class="w3-center">Set up once help every month</h5>
-      <p class="w3-large">With just one dollar a month </p>
-      </div>
-  </div>
-  
   <hr>
   
   <!-- About Section -->
