June and July Donations

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@ img {
   <div class="w3-row w3-padding-64" id="impact">
       <div class="l6 w3-padding-large">
         <h1 class="w3-left-align">Our Work</h1><br>
-        <a href="https://www.khaanachahiye.com/"><h4>Khaana Chahiye </h4></a>
+        <a href="https://www.khaanachahiye.com/"><h4>Khaana Chahiye - COVID-19 Relief</h4></a>
         <p class="w3-text-grey">We donated $181 in May 2020 which helped them distribute around 550 meals to the underprivileged people affected due to COVID-19 across Mumbai </p><br>
+        <a href="https://www.actionaidindia.org/story/actionaids-emergency-teams-supporting-communities-face-devastation-caused-cyclone-amphan-amid-rising-threat-covid-19/"><h4>ActionAid India - Cyclone Amphan</h4></a>
+        <p class="w3-text-grey">We donated $184 in June 2020 which helped them provide basic necessities (Medical supplies, Dry rations, Mosquito nets, COVID-19 protection gear, Solar lamp, Education kit for children, Sanitation kit and some household items) to one family out of the many families affected by Amphan Cyclone in West Bengal and Odisha </p><br>
+        <a href="https://www.actionaidindia.org/assam-flood-relief-2020//"><h4>ActionAid India - Assam Floods</h4></a>
+        <p class="w3-text-grey">We donated $197 in July 2020 which helped 24 families affected by devastating floods in Assam with hygiene kits, 44 families with dry ration and 42 familes with mosquito nets, COVID-19 protection material and waterproof tents </p><br>
       
       
         <p class="w3-text-grey"><h5>Tell us your charity, and we'll champion your cause!</h5></p>
